bizinikiwi/pezframe/support/test/tests/pezpallet_ui/pezpallet_doc_empty.stderr
error: The `pezpallet_doc` received an unsupported argument. Supported format: `pezpallet_doc("PATH")`
  --> tests/pezpallet_ui/pezpallet_doc_empty.rs:20:1
   |
20 | #[pezpallet_doc]
   | ^
